--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,86 @@ ol {
   fill: #ffffff;
 }
 
+.subscribe-general-block {
+  margin-left: 92px;
+  align-items: center;
+}
+.subscribe-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+  color: var(--white-color);
+  margin-bottom: 20px;
+}
+
+.subscribe-footer-form {
+  display: flex;
+}
+
+.subscribe-footer-form input::placeholder {
+  color: var(--white-color-60);
+}
+
+.email-footer-form {
+  display: inline-block;
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--background-hero-footer);
+  color: var(--white-color);
+  transition-property: box-shadow, border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-footer-form:focus,
+.email-footer-form:hover,
+.subscribe-footer-btn:focus,
+.subscribe-footer-btn:hover {
+  outline: none;
+  border: 1px solid #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-footer-btn {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 12px;
+  border-color: transparent;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn-pos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.subscribe-btn-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  color: var(--white-color);
+}
+.send-icon {
+  fill: var(--white-color);
+  margin-left: 10px;
+}
+
 /* Page 2 */
 
 /* Main*/
