--- a/css/styles.css
+++ b/css/styles.css
@@ -290,9 +290,10 @@ ol {
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  justify-content: right;
+  justify-content: center;
   width: 528px;
   height: 581px;
+  padding: 40px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -313,6 +314,58 @@ ol {
   background-color: transparent;
   padding: 0;
   cursor: pointer;
+}
+
+.modal-form {
+  position: absolute;
+  display: block;
+  margin: 40px;
+}
+
+.modal-text {
+  display: block;
+  display: flex;
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.contact-form {
+  margin-top: 12px;
+}
+.contact-form-field {
+}
+.contact-form-label {
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--font-family);
+  display: block;
+  margin-bottom: 4px;
+}
+.contact-form-box {
+  display: block;
+  position: relative;
+}
+.contact-form-name {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 11px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.contact-form-icon {
+  fill: #212121;
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* <!-- Section особливости --> */
