--- a/css/styles.css
+++ b/css/styles.css
@@ -347,11 +347,13 @@ ol {
   display: block;
   margin-bottom: 4px;
 }
+
 .contact-form-box {
   display: block;
   position: relative;
 }
-.contact-form-name {
+.contact-form-name,
+.contact-form-phone {
   display: block;
   width: 100%;
   height: 40px;
