--- a/css/styles.css
+++ b/css/styles.css
@@ -314,22 +314,30 @@ ol {
   background-color: transparent;
   padding: 0;
   cursor: pointer;
+  transition: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:focus,
+.modal-close-btn:hover {
+  fill: var(--accent-color);
 }
 
 .modal-form {
   position: absolute;
   display: block;
-  margin: 40px;
+  width: 448px;
 }
 
 .modal-text {
-  display: block;
   display: flex;
   font-family: 'Roboto';
   font-weight: 700;
   font-size: 20px;
   line-height: calc(23 / 20);
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   letter-spacing: 0.03em;
 
   color: #212121;
@@ -337,8 +345,8 @@ ol {
 .contact-form {
   margin-top: 12px;
 }
-.contact-form-field {
-}
+/* .contact-form-field {
+} */
 .contact-form-label {
   font-size: 12px;
   line-height: calc(14 / 12);
@@ -346,6 +354,7 @@ ol {
   color: var(--font-family);
   display: block;
   margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .contact-form-box {
@@ -353,13 +362,52 @@ ol {
   position: relative;
 }
 .contact-form-name,
-.contact-form-phone {
+.contact-form-phone,
+.contact-form-email {
   display: block;
   width: 100%;
   height: 40px;
   padding: 11px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-name:focus,
+.contact-form-phone:focus,
+.contact-form-email:focus,
+.contact-form-name:hover,
+.contact-form-phone:hover,
+.contact-form-email:hover {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.contact-form-comments {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-comments:hover,
+.contact-form-comments:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.contact-form-comments::placeholder {
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .contact-form-icon {
@@ -368,6 +416,90 @@ ol {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+  pointer-events: none;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-name:focus + .contact-form-icon,
+.contact-form-phone:focus + .contact-form-icon,
+.contact-form-email:focus + .contact-form-icon,
+.contact-form-name:hover + .contact-form-icon,
+.contact-form-phone:hover + .contact-form-icon,
+.contact-form-email:hover + .contact-form-icon {
+  fill: var(--accent-color);
+}
+
+.contact-form-accept {
+  display: flex;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+.contact-form-icon-accept,
+.contact-form-icon-unaccept {
+  transition: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-checkbox:checked + .contact-form-icon-checkbox .contact-form-icon-accept {
+  opacity: 1;
+}
+
+.contact-form-checkbox:checked + .contact-form-icon-checkbox .contact-form-icon-unaccept {
+  opacity: 0;
+}
+
+.contact-form-accept-text {
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--font-family);
+  margin-left: 7px;
+  user-select: none;
+}
+
+.contact-form-link {
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+  margin-left: 7px;
+}
+
+.contact-form-name + .modal-close-icon:hover {
+  fill: var(--accent-color);
+}
+
+.contact-form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: calc(30 / 16);
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-button:focus,
+.contact-form-button:hover {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* <!-- Section особливости --> */
